// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelCheckBoxEnabled CheckBox label can be a custom component 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #120D2E;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 0.375rem;
}

.emotion-2 {
  margin: 0rem 0.625rem 0rem 0rem;
}

.emotion-3 {
  border: 0;
  clip: rect(0 0 0 0);
  clippath: inset(50%);
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
}

.emotion-4 {
  width: 16px;
  height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border-radius: 0.25rem;
  border: 0.063rem solid #A4AAC0;
  cursor: default;
}

<div>
  <div
    class="emotion-0"
    data-testid="LabelCheckboxContainer"
  >
    <label
      class="emotion-1"
      data-testid="checkboxContainer"
    >
      <div
        class="emotion-2"
        data-testid="labelContainer"
      >
        <a
          href="#"
        >
          testLink
        </a>
      </div>
      <input
        class="emotion-3"
        data-testid="hiddenCheckbox"
        type="checkbox"
      />
      <div
        class="emotion-4"
        data-testid="styledCheckbox"
      />
    </label>
  </div>
</div>
`;

exports[`LabelCheckBoxEnabled LabelCheckBox is hovered 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #120D2E;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 0.375rem;
}

.emotion-2 {
  margin: 0rem 0.625rem 0rem 0rem;
}

.emotion-3 {
  color: #120D2E;
  font-size: 0.813rem;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  clippath: inset(50%);
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
}

.emotion-5 {
  width: 16px;
  height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border-radius: 0.25rem;
  border: 0.063rem solid #A4AAC0;
  cursor: default;
}

<div>
  <div
    class="emotion-0"
    data-testid="LabelCheckboxContainer"
  >
    <label
      class="emotion-1"
      data-testid="checkboxContainer"
    >
      <div
        class="emotion-2"
        data-testid="labelContainer"
      >
        <label
          class="emotion-3"
        >
          testLabel
        </label>
      </div>
      <input
        class="emotion-4"
        data-testid="hiddenCheckbox"
        type="checkbox"
      />
      <div
        class="emotion-5"
        data-testid="styledCheckbox"
      />
    </label>
  </div>
</div>
`;

exports[`LabelCheckBoxEnabled LabelCheckBox is hovered 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #413D58;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 0.375rem;
}

.emotion-2 {
  margin: 0rem 0.625rem 0rem 0rem;
}

.emotion-3 {
  color: #413D58;
  font-size: 0.813rem;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  clippath: inset(50%);
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
}

.emotion-5 {
  width: 16px;
  height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border-radius: 0.25rem;
  border: 0.063rem solid #676478;
  cursor: pointer;
}

<div>
  <div
    class="emotion-0"
    data-testid="LabelCheckboxContainer"
  >
    <label
      class="emotion-1"
      data-testid="checkboxContainer"
    >
      <div
        class="emotion-2"
        data-testid="labelContainer"
      >
        <label
          class="emotion-3"
        >
          testLabel
        </label>
      </div>
      <input
        class="emotion-4"
        data-testid="hiddenCheckbox"
        type="checkbox"
      />
      <div
        class="emotion-5"
        data-testid="styledCheckbox"
      />
    </label>
  </div>
</div>
`;

exports[`LabelCheckBoxEnabled LabelCheckBox should allow to check 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #120D2E;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 0.375rem;
}

.emotion-2 {
  margin: 0rem 0.625rem 0rem 0rem;
}

.emotion-3 {
  color: #120D2E;
  font-size: 0.813rem;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  clippath: inset(50%);
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
}

.emotion-5 {
  width: 16px;
  height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border-radius: 0.25rem;
  border: 0.063rem solid #A4AAC0;
  cursor: default;
}

<div>
  <div
    class="emotion-0"
    data-testid="LabelCheckboxContainer"
  >
    <label
      class="emotion-1"
      data-testid="checkboxContainer"
    >
      <div
        class="emotion-2"
        data-testid="labelContainer"
      >
        <label
          class="emotion-3"
        >
          testLabel
        </label>
      </div>
      <input
        class="emotion-4"
        data-testid="hiddenCheckbox"
        type="checkbox"
      />
      <div
        class="emotion-5"
        data-testid="styledCheckbox"
      />
    </label>
  </div>
</div>
`;
